// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`setup-component > fixtures > tests/fixtures/basic.setup.tsx 1`] = `
"import { createVNode, defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: "basic.setup",
  props: {
    foo: {
      type: String,
      required: true
    }
  },
  setup(__props) {
    defineRender(() => {
      return createVNode("div", null, null);
    });
    return () => {
    };
  }
});

var basic_setup = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { basic_setup as default };
"
`;

exports[`setup-component > fixtures > tests/fixtures/with-define-options.setup.tsx 1`] = `
"import { createVNode, defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
  ...{
    name: "App"
  },
  __name: "with-define-options.setup",
  setup(__props) {
    defineRender(() => {
      return createVNode("div", null, null);
    });
    return () => {
    };
  }
});

var withDefineOptions_setup = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { withDefineOptions_setup as default };
"
`;
